# JobScrapper

./: .gitignore  CHANGELOG.md  README.md  main.py  makefile  pyproject.toml
.github/workflows/: pytest.yml
cli/: README.md  cli_base.py  cli_centraliser.py
job_scrapper/: __init__.py  job_scrapper.py  main.py  scrapper_skeleton.py
job_scrapper/cli/: README.md  ask_contact.py  cli_base.py  cli_centraliser.py  cli_configure.py  database_cli.py  offers_cli.py  scrapper_cli.py
job_scrapper/cli/configure/: cli_contact.py  cli_groupe_configure.py  cli_keyword.py  cli_localisation.py
job_scrapper/cli/database/: enumerate_cli.py
job_scrapper/cli/offers/: cli_archive.py  cli_list.py  cli_request_format_help.py  offers_cli.py  offers_cli_tools.py
job_scrapper/cli/standalones/: request_offer_job_cli.py  scrapper_cli.py
job_scrapper/scrap_job_from/: .template.py  chu_mtp.py  cirad.py  cnrs.py  france_genomique.py  ifremer.py  inrae.py  inserm.py  ird.py  sanofi.py  scrap_cirad.py  sfbi.py
job_scrapper/scrapper_skeleton/: legacy_pdf_jobs.py  legacy_request_core.py  logger_core.py  object_core.py  pdf_jobs.py  request_core.py  scrapper_skeleton.py  sql_core.py
job_scrapper/scrapper_skeleton/sql_core/: README.md  condition_wrapper.py  filter_part.py  sql_command_constructor.py  sql_core.py  sql_main.py  sql_tables.py  wrapper_logical.py
job_scrapper/sql/cli/: archive_offer_cli.py  keyword_cli.py  localisation_cli.py
job_scrapper/sql/filters/: README.md  filter_generator.py  filter_part.py
job_scrapper/sql/tables/: README.md  __init__.py  archived.py  base_table.py  jobs.py
job_scrapper/sql/tables/helpers/: README.md  job_request.py  keyword_manager.py  sql_request_wrapper.py
job_scrapper/sql/tables/job_extensions/: README.md  job_extra_base.py  keywords.py  metadata.py
job_scrapper/sql/tables/keywords/: keyword_regex.py  keyword_version.py  selected_keyword_version.py
job_scrapper/sql/tables/places/: README.md  distances.py  places.py
job_scrapper/sql/wrappers/: README.md  wrapper_clause_element.py  wrapper_comparison.py  wrapper_logical.py
job_scrapper/tools/: README.md  geolocalisation.py  logger_core.py  secondary_logger_user.py  variable_tracker.py
job_scrapper/web_processing/: block_extractor.py  enhanced_chrome_browser.py  export_browser_file.py  web_page_parser.py
sql/: README.md
sql/cli/: database_cli.py  keyword_cli.py  localisation_cli.py  request_job_cli.py  request_offer_job_cli.py
sql/filters/: filter_generator.py  filter_part.py
sql/tables/: README.md  __init__.py  base_table.py  distances.py  jobs.py  keywords.py  metadata.py  time_stamps.py
sql/tables/helpers/: job_request.py  keyword_manager.py  sql_request_wrapper.py
sql/tables/job_extensions/: job_extra_base.py  keywords.py  metadata.py  time_stamps.py
sql/tables/keywords/: keyword_regex.py  keyword_version.py
sql/tables/places/: README.md  distances.py  places.py
sql/tables/request_helpers/: job_request.py  sql_request_wrapper.py
sql/wrappers/: wrapper_clause_element.py  wrapper_comparison.py
tests/: conftest.py  conftest_mandatory_identifier.py  conftest_offline.py  table_for_test_only.py  test_tmp_pytest.py
tests/job_scrapper/: js_base_test.py
tests/job_scrapper/scrapper_skeleton/: test_logger_core.py  test_object_core.py  test_sql_core.py
tests/job_scrapper/scrapper_skeleton/sql_core/: table_for_test_only.py  test_condition_wrapper.py  test_sql_core.py  test_wrapper_clause_element.py  test_wrapper_comparison.py  test_wrapper_logical.py
tests/sql/filters/: test_command_generator.py  test_filter_part.py
tests/sql/tables/: test_base_table.py  test_distances.py  test_jobs.py  test_keywords.py  test_tables.py  test_time_stamps.py
tests/sql/tables/helpers/: test_job_request.py  test_keyword_manager.py  test_sql_request_wrapper.py
tests/sql/tables/job_extensions/: abstract_job_extra_base.py  test_keywords.py  test_metadata.py  test_time_stamps.py
tests/sql/tables/keywords/: test_keyword_regex.py  test_keyword_version.py  test_selected_keyword_version.py
tests/sql/tables/places/: test_distances.py  test_places.py
tests/sql/tables/request_helpers/: test_job_request.py  test_sql_request_wrapper.py
tests/sql/wrappers/: test_wrapper_clause_element.py  test_wrapper_comparison.py  test_wrapper_logical.py
tests/test_tools/: test_variable_tracker.py  variable_tracker.py
tests/tools/: test_get_unique_path.py  test_logger_core.py  test_variable_tracker.py
tests/tools/geolocalisation/: base_test_geolocalisation.py  test_geolocalisation.py  test_geolocalisation_offline.py  test_geolocalisation_online.py
tools/: geolocalisation.py  get_unique_path.py  logger_core.py  secondary_logger_user.py  turn_file_to_text.py
web_processing/: block_extractor.py  enhanced_chrome_browser.py  export_browser_file.py  web_page_parser.py
