[tool.poetry]
name = "JobScrapper"
version="0.3.0"
description = "A simple library that dowload job offers from several instituts."
authors = ["Marhal Florent <marchal.florent.pro@gmail.com>"]
readme = "README.md"
license = "CC BY-SA 4.0"
packages = [{ include = "job_scrapper" }]

[tool.poetry.scripts]
job-scrapper = "job_scrapper.main:cli"

[tool.poetry.dependencies]
python = ">=3.10.12,<3.11"
selenium = "^4.35.0"
bs4 = "^0.0.2"
geopy = "^2.4.1"
pypdf2 = "^3.0.1"
click-option-group = "^0.5.7"
cloup = "^3.0.8"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"
pylint = "^3.3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = 'py$'
line-length = 80
target-version = ["py310"]

[tool.isort]
profile = "black"
src_paths = ["job_scrapper"]
known_first_party = ["job_scrapper"]

[tool.mypy]
python_version = "3.10"

# ignore_missing_imports = true
# disallow_untyped_defs = true
# warn_unused_ignores = true

[tool.pylint.MASTER]
init-hook = "import sys; sys.path.append('jobfrom')"

[tool.pylint]
disable = ["C0114", "C0113", "R0903"]
init-hook = "import sys; sys.path.append('jobfrom')"
max-line-length = 880
