[project]
name = "job-scrapper"
version="0.6.0"
description = "A simple library that dowload job offers from several instituts."
authors = [
    {name="Marhal Florent", email="<marchal.florent.pro@gmail.com>"}
]
readme = "README.md"
license = "CC BY-SA 4.0"

packages = [
  { include = "job_scrapper" }
]

[project.scripts]
job-scrapper = "job_scrapper.main:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
selenium = "^4.35.0"
bs4 = "^0.0.2"
geopy = "^2.4.1"
click-option-group = "^0.5.7"
cloup = "^3.0.8"
sqlalchemy = "^2.0.44"
pdfplumber = "^0.11.8"
unidecode = "^1.4.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"
pylint = "^3.3.8"
pytest = "^8.4.2"
commitizen = "^4.9.1"
dill = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = 'py$'
line-length = 80
target-version = ["py311"]

[tool.isort]
profile = "black"
src_paths = ["./job_scrapper", "./sql", "./tests"]
known_first_party = ["job_scrapper"]
known_third_party = ["sqlalchemy"]

[tool.mypy]
python_version = "3.11"

# ignore_missing_imports = true
# disallow_untyped_defs = true
# warn_unused_ignores = true

[tool.pylint.MASTER]
init-hook = "import sys; sys.path.append('jobfrom')"

[tool.pylint]
disable = ["C0114", "C0113", "R0903"]
init-hook = "import sys; sys.path.append('jobfrom')"
max-line-length = 120

[tool.pytest.ini_options]
markers = [
    "unautomatedTest: Tests that can not be runs in an automated environement due to the request of certains webservices",

    "logs: Test logging functions.",
    "testModules: Test module only used during test runs.",
    "jobScrapper: Test module only used during test runs.",
    "mandatory_user_agent: Test that require the use of --user_agent",
    "offline_simulation: Test that test functions that require connexion when internet conexion is offline",
    "online_simulation: Test that test functions that require internet connewion",

    # Wrappers
    "sqlalchemy_wrappers: Test classes that wraps SQLAclhemy functionalities",

    # Table related
    "js_tables: Test JobScrapper related sqlAlchemy tables.",
    "js_tables_sql: Same as js_tables but for sql related methods.",
    "js_tables_pyt: Same as js_tables but for non sql related methods."
]
addopts = "-s"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "v$version"
update_changelog_on_bump = true